[build-system]
requires = ["setuptools>=61.0", "wheel", "versioneer"]
build-backend = "setuptools.build_meta"

[project]
name = "femto"
description = "A comprehensive toolkit for predicting free energies"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]

[project.scripts]
femto = "femto.fe._cli:main"

[project.entry-points."femto.cli_plugins"]
femto = "femto.fe._cli:main"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["."]

[tool.setuptools.package-data]
"femto.fe.testing" = ["data/**/*"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "femto/fe/_version.py"
versionfile_build = "femto/fe/_version.py"
tag_prefix = ""
parentdir_prefix = "femto-"

[tool.ruff.lint]
ignore = ["C901"]
select = ["B","C","E","F","W","B9"]
ignore-init-module-imports = true

[tool.coverage.run]
omit = ["**/tests/*", "**/_version.py"]

[tool.coverage.report]
exclude_lines = [
    "@overload",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

[tool.vulture]
exclude = ["versioneer.py", "_version.py", "cli.py"]
ignore_names = ["process", "expand", "setup", "mode", "mock_get_summary", "cls"]
min_confidence = 62
paths = ["femto"]
sort_by_size = true
verbose = false
