[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "femto"
description = "A comprehensive toolkit for predicting free energies"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]

[project.scripts]
femto = "femto.fe._cli:main"

[project.entry-points."femto.cli_plugins"]
femto = "femto.fe._cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["femto*"]

[tool.setuptools.package-data]
"femto.fe.testing" = ["data/**/*"]

[tool.setuptools_scm]

[tool.ruff.lint]
ignore = ["C901"]
select = ["B","C","E","F","W","B9"]
ignore-init-module-imports = true

[tool.coverage.run]
omit = ["**/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "@overload",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

[tool.vulture]
exclude = ["cli.py"]
ignore_names = ["process", "expand", "setup", "mode", "mock_get_summary", "cls"]
min_confidence = 62
paths = ["femto"]
sort_by_size = true
verbose = false
